# SaturnEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SaturnEngine.sln  build.bat  premake5.lua
AppSandbox/: AppSandbox.vcxproj  AppSandbox.vcxproj.filters  CMakeLists.txt
AppSandbox/src/: AppSandbox.cpp
SaturnEngine/: CMakeLists.txt  SaturnEngine.vcxproj  SaturnEngine.vcxproj.filters
SaturnEngine/include/: SaturnEngine.h
SaturnEngine/include/Management/: AllocSubsystem.h  ConfigSubsystem.h  ErrorManager.h  ErrorSubsystem.h  FrameAllocator.h  LogManager.h  LogSubsystem.h
SaturnEngine/include/SaturnEngine/: Core.h  Errors.h  GlobalDataStructs.h  SaturnPrecompiled.h  StartUp.h  Window.h
SaturnEngine/include/SaturnEngine/Events/: Event.h  EventSender.h  WindowEvents.h
SaturnEngine/include/Utils/: Errors.h  File.h  String.h
SaturnEngine/libs/: CMakeLists.txt
SaturnEngine/src/: SaturnEngine.h
SaturnEngine/src/Management/: AllocSubsystem.cpp  ConfigSubsystem.cpp  ErrorManager.cpp  ErrorSubsystem.cpp  FrameAllocator.cpp  LogManager.cpp  LogManager.h  LogSubsystem.cpp
SaturnEngine/src/SaturnEngine/: Core.h  Errors.h  StartUp.cpp  Startup.h  Test.cpp  Test.h  Window.cpp
SaturnEngine/src/Utils/: File.cpp  String.cpp
cmake/: ide.cmake
examples/: CMakeLists.txt
examples/EmptyApp/: CMakeLists.txt
examples/EmptyApp/src/: Main.cpp
